--- a/arah1.html
+++ b/arah1.html
@@ -87,7 +87,7 @@ even thought theres always a sadness behind that laugh</p>
       </div>
 
       <div class="w3-half">
-        <img src="PAG2.jpg" style="width:100%">
+        <img src="pag2.jpg" style="width:100%">
         <img src="RR.jpg" style="width:100%">
         <img src="M1.jpg" style="width:100%">
       </div>
