--- a/arah1.html
+++ b/arah1.html
@@ -56,7 +56,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> JOHARA SIDIK.</h1>
     <p>welcome to my website.</p>
-    <img src="JJ.jpg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src="jj.jpg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -81,15 +81,15 @@ even thought theres always a sadness behind that laugh</p>
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="PAG.jpg" style="width:100%">
-        <img src="P1.jpg" style="width:100%">
-        <img src="M2.jpg" style="width:100%">
+        <img src="pag.jpg" style="width:100%">
+        <img src="p1.jpg" style="width:100%">
+        <img src="m2.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
         <img src="pag2.jpg" style="width:100%">
-        <img src="RR.jpg" style="width:100%">
-        <img src="M1.jpg" style="width:100%">
+        <img src="rr.jpg" style="width:100%">
+        <img src="m1.jpg" style="width:100%">
       </div>
   </a>
 <!-- Contact Section -->
