--- a/arah1.html
+++ b/arah1.html
@@ -83,13 +83,13 @@ even thought theres always a sadness behind that laugh</p>
       <div class="w3-half">
         <img src="pag.jpg" style="width:100%">
         <img src="p1.jpg" style="width:100%">
-        <img src="m2.jpg" style="width:100%">
+        <img src="m2.JPG" style="width:100%">
       </div>
 
       <div class="w3-half">
         <img src="pag2.jpg" style="width:100%">
         <img src="rr.jpg" style="width:100%">
-        <img src="m1.jpg" style="width:100%">
+        <img src="m1.JPG" style="width:100%">
       </div>
   </a>
 <!-- Contact Section -->
